# attention-sampling

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.rst  headers.py  mkdocs.yml  run_gitlab_ci.py  setup.py
ats/: __init__.py
ats/core/: __init__.py  ats_layer.py  builder.py  expectation.py  sampling.py
ats/data/: __init__.py  base.py  from_tensors.py
ats/ops/cmake/: FindTensorFlow.cmake
ats/ops/extract_patches/: CMakeLists.txt  __init__.py  extract_patches.cc  extract_patches.cu  extract_patches.h
ats/utils/: __init__.py  layers.py  regularizers.py  training.py
docs/: attention-sampling.md  contributing.md  custom-ops.md  examples.md  index.md  installation.md  keras-api.md
docs/css/: extra.css
scripts/: make_mnist.py  mnist.py  speed_limits.py
tests/core/: test_ats_layer.py  test_builder.py  test_expectation.py  test_sampling.py
tests/data/: test_from_tensors.py
tests/ops/: __init__.py  test_extract_patches.py
tests/utils/: test_image_transforms.py
